--- a/src-tauri/cabr2_types/Cargo.toml
+++ b/src-tauri/cabr2_types/Cargo.toml
@@ -13,3 +13,4 @@ edition = "2018"
 chrono = { version = "0.4.19", features = ["serde"] }
 log = "0.4.14"
 serde = { version = "1.0.124", features = ["derive"] }
+warp = "0.3.0"
