--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "tauri": "tauri",
-    "tauri-start": "tauri dev",
-    "build-release": "ng build --prod && tauri build"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +21,6 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "rxjs": "~6.6.6",
-    "tauri": "^0.14.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
