--- a/src-tauri/cabr2_search/Cargo.toml
+++ b/src-tauri/cabr2_search/Cargo.toml
@@ -19,3 +19,4 @@ serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
 ureq = { version = "1.5.4", features = ["tls", "json"] }
+warp = "0.3.0"
