--- a/src-tauri/cabr2_config/Cargo.toml
+++ b/src-tauri/cabr2_config/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
 toml = { version = "0.5.8", features = ["preserve_order"] }
+warp = "0.3.0"
 
 [features]
 portable = [ ]
