--- a/src-tauri/cabr2_load_save/Cargo.toml
+++ b/src-tauri/cabr2_load_save/Cargo.toml
@@ -23,3 +23,4 @@ serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
 wkhtmltopdf = "0.3.0"
+warp = "0.3.0"
