--- a/src-tauri/cabr2_config/Cargo.toml
+++ b/src-tauri/cabr2_config/Cargo.toml
@@ -17,9 +17,9 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
-tauri = { version = "0.11.1", default-features = false }
 thiserror = "1.0.24"
 toml = { version = "0.5.8", features = ["preserve_order"] }
+warp = "0.3.0"
 
 [features]
 portable = [ ]
